Fix compiler warnings for older GCC

FIXED: [ 390994 ] [dev] Compiler warnings with gcc-6.4.0
BUG: 390994

GCC older than version 7 doesn't have the attribute [[gnu::fallthrough]]. This
patch suppresses that compiler warning. The other warnings mentioned in the bug
report are still present in version 7 of GCC.